--- a/Jobfile.example.yml
+++ b/Jobfile.example.yml
@@ -11,7 +11,18 @@ jobs:
         workdir: .
         command: echo
         args:
-          - The TASK_ENV value is $TASK_ENV
+          - run
+          - task2
         timeout: 10s
-        env:
-          TASK_ENV: task2_env
+      - name: task 3 will timeout
+        workdir: .
+        command: sleep
+        args:
+          - 5
+        timeout: 1s
+      - name: task 4 unreachable
+        workdir: .
+        command: echo
+        args:
+          - unreachable at this task
+        timeout: 10s
